# s3_ops

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: s3.py
utils/: buckets.py
